Bug 377917 - Flickr Picture of the Day is pixelated/has incorrect resolution
Summary: Flickr Picture of the Day is pixelated/has incorrect resolution
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: 5.9.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Weng Xuetian
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-22 09:19 UTC by Pekka Helenius
Modified: 2017-09-01 23:21 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11
Sentry Crash Report:


Attachments
Pixelated Flickr wallpaper, 1920x1080 (630.39 KB, image/png)
2017-03-22 09:19 UTC, Pekka Helenius
Details
Pixelated Flickr Wallpaper 1366x768 (334.64 KB, image/png)
2017-07-30 02:19 UTC, Vitor Pereira
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pekka Helenius 2017-03-22 09:19:28 UTC
Created attachment 104681 [details]
Pixelated Flickr wallpaper, 1920x1080

As stated in the title, Flickr Picture of the Day wallpaper is pixelated (not correct resolution downloaded from Flickr servers?). Affects at least resolutions 1366x768 and 1920x1080.

The issue makes usage of Flickr wallpaper quite uncomfortable (not completely useless but at the moment I see Flickr wallpaper as a less-preferred choice).

The attached picture demonstrates the issue (hopefully clearly enough).

The bug has been there ever since I started using Plasma 5 Desktop (from ver. 5.9.2 to 5.9.4).
Comment 1 Pekka Helenius 2017-03-22 09:23:12 UTC
Worth noting: All wallpaper positioning have been tested (scaled, scaled & cropped, scaled keep proportions, centered, tiled). Doesn't fix or affect the bug in any way.
Comment 2 Kai Uwe Broulik 2017-03-30 13:00:29 UTC
Probably needs to send a suffix to the flickr API [1], such as _h which will give us 1600x1600 images. Unfortunately, I often get an "unavailable" image back from the API when I do this :/

[1] https://www.flickr.com/services/api/misc.urls.html
Comment 3 abhigenie92 2017-05-25 04:20:12 UTC
Still exists! Please check!
Comment 4 Pekka Helenius 2017-07-15 23:15:13 UTC
Still an issue
Comment 5 Vitor Pereira 2017-07-30 02:19:38 UTC
Created attachment 106963 [details]
Pixelated Flickr Wallpaper 1366x768

Hi, I'm running Arch Linux with KDE Plasma 5.10.4, KDE Frameworks 5.36.0 and QT 5.9.1 and I can reproduce this issue on my system. I attached a screenshot.
Comment 6 Weng Xuetian 2017-09-01 23:21:46 UTC
Git commit 819ed65e6f8ba83c7cc10ac278197319e53f2e7e by Weng Xuetian.
Committed on 01/09/2017 at 23:21.
Pushed by xuetianweng into branch 'master'.

Try to get higher quality image for flickr potd.
FIXED-IN: 5.11

M  +56   -21   dataengines/potd/flickrprovider.cpp

https://commits.kde.org/kdeplasma-addons/819ed65e6f8ba83c7cc10ac278197319e53f2e7e