Try to get higher quality image for flickr potd.

BUG: 377917
FIXED-IN: 5.11